<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/kalendarz_update_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kalendarz_title"
                style="@style/TextViewTiitleFragments"
                android:text="@string/kalendarz_title" />

            <AutoCompleteTextView
                android:id="@+id/edytuj_date_imie_kota_edit_text"
                style="@style/TextViewFragments"
                android:hint="Imie kota" />

            <AutoCompleteTextView
                android:id="@+id/edytuj_date_edit_text"
                style="@style/TextViewFragments"
                android:maxLength="10"
                android:hint="Data" />

            <EditText
                android:id="@+id/edytuj_date_dodatkowe_informacje_edit_text"
                style="@style/TextViewFragments"
                android:hint="dodatkowe_informacje"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_usun_z_listy_dat"
                    style="@style/ButtonySterujace"
                    android:text="@string/usun"/>

                <Button
                    android:id="@+id/edytuj_dane_daty_button"
                    style="@style/ButtonySterujace"
                    android:text="@string/edytuj"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>